// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSSWrapper component doesn't render if not passed CSS blob 1`] = `
<div>
  <p>
    Example text
  </p>
</div>
`;

exports[`CSSWrapper component renders if passed CSS blob 1`] = `
.sx03kze-6obnf {
  margin: auto;
  height: 100px;
  width: 100px;
}

<div>
  <div
    class="sx03kze sx03kze-6obnf"
    data-testid="css-wrapper"
  >
    <p>
      Example text
    </p>
  </div>
</div>
`;
